--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ When I’m not diving into tech, you’ll find me trading stocks, exploring Linu
         <section>
             <h2>Contact</h2>
             <p>Email: sreelalnet@gmail.com</p>
-            <p>GitHub: <a href="https://github.com/turtle-txt.io">github.com/turtle-txt.io</a></p>
+            <p>GitHub: <a href="https://github.com/turtle-txt.github.io">github.com/turtle-txt.github.io</a></p>
         </section>
     </main>
 <script src="script.js"></script>
