--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ When I’m not diving into tech, you’ll find me trading stocks, exploring Linu
 
     <div id="LotteryTool" class="tabcontent">
         <h3>Lottery Tool</h3>
-        <img src="lottery tool.png" alt="Lottery Tool" style="width:100%; max-width: 500px;">
+        <img src="https://github.com/turtle-txt/turtle-txt.github.io/blob/main/lottery%20tool.png?raw=true" alt="Lottery Tool" style="width:100%; max-width: 500px;">
         <p>This tool extracts lottery results from PDFs, identifies repeating number patterns, and helps users analyze results.</p>
         <p>It's built using Python and Kali Linux for efficient data extraction and pattern analysis.</p>
     </div>
