--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ When I’m not diving into tech, you’ll find me trading stocks, exploring Linu
     </div>
     <div id="VulnerabilityScanner" class="tabcontent">
         <h3>Vulnerability Scanner</h3>
-        <img src="vulnerability-scanner-image.jpg" alt="Vulnerability Scanner" style="width:100%; max-width: 500px;">
+        <img src="https://github.com/turtle-txt/turtle-txt.github.io/blob/main/that.png?raw=true" alt="Vulnerability Scanner" style="width:100%; max-width: 500px;">
         <p>This is a tool that scans websites for common vulnerabilities, helping web administrators secure their sites.</p>
         <p>Features include scanning for SQL injection, XSS vulnerabilities, and more.</p>
     </div>
