--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>Cybersecurity Enthusiast | Novice Python Programmer | Linux Advocate</p>
+        <p>Cybersecurity Enthusiast| Network Engineer | Novice Python Programmer | Linux Advocate</p>
     </header>
     <main>
         <section>
