--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>I’m Sreelal Ramadas, a passionate cybersecurity enthusiast with a diverse background that bridges technology and problem-solving. With training in network security, steganography, BadUSB, Evil Twin attacks, and SQL, I thrive on understanding and addressing the complexities of the digital world. My journey into the world of technology is not just about theory; I actively create and experiment with tools like the ones I’m developing in Kali Linux and Python to extract meaningful data from real-world scenarios, such as lottery results, and scan websites for vulnerabilities.
+            <p>I’m Sreelal Ramadas, a dedicated Network Engineer with a growing focus on cybersecurity research and emerging network technologies. With hands-on experience in configuring and troubleshooting network devices, VLANs, DHCP, VPNs, and routing protocols, I’ve developed a strong foundation in designing and maintaining secure, reliable infrastructure. My technical journey extends beyond daily operations—I actively explore areas like steganography, BadUSB, Evil Twin attacks, and SQL injection to understand how networks can be protected against evolving threats.
 
-From working in customer service and hardware support to tackling network engineering challenges, I’ve gained hands-on experience in solving problems that require both technical skill and creativity. I believe in continuously learning, adapting, and pushing the boundaries of what technology can do. As I continue to grow in the cybersecurity field, I’m driven by a desire to make systems more secure and to build solutions that are both innovative and practical.
+Driven by curiosity and continuous learning, I regularly experiment with tools and scripts in Kali Linux and Python, building utilities to extract insights from data sets and scanning real-world websites for vulnerabilities. My background in customer service, hardware support, and IT operations has taught me the value of blending technical expertise with practical problem-solving.
 
-When I’m not diving into tech, you’ll find me trading stocks, exploring Linux fundamentals, or studying new cybersecurity concepts. Every project I take on is an opportunity to learn, innovate, and make an impact in the digital world.</p>
+Outside of work, I’m immersed in learning Linux fundamentals, exploring cybersecurity frameworks, and trading stocks—always looking for ways to connect systems thinking with real-world outcomes. For me, every challenge is an opportunity to innovate, secure, and strengthen the networks that keep the digital world running.</p>
         </section>
        <section id="projects">
     <h2>Projects</h2>
