--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>I’m Sreelal Ramadas, a dedicated Network Engineer with a growing focus on cybersecurity research and emerging network technologies. With hands-on experience in configuring and troubleshooting network devices, VLANs, DHCP, VPNs, and routing protocols, I’ve developed a strong foundation in designing and maintaining secure, reliable infrastructure. My technical journey extends beyond daily operations—I actively explore areas like steganography, BadUSB, Evil Twin attacks, and SQL injection to understand how networks can be protected against evolving threats.
-
-Driven by curiosity and continuous learning, I regularly experiment with tools and scripts in Kali Linux and Python, building utilities to extract insights from data sets and scanning real-world websites for vulnerabilities. My background in customer service, hardware support, and IT operations has taught me the value of blending technical expertise with practical problem-solving.
-
-Outside of work, I’m immersed in learning Linux fundamentals, exploring cybersecurity frameworks, and trading stocks—always looking for ways to connect systems thinking with real-world outcomes. For me, every challenge is an opportunity to innovate, secure, and strengthen the networks that keep the digital world running.</p>
+            <p>I am a Network Engineer with a strong interest in cybersecurity and infrastructure optimization. I specialize in configuring and troubleshooting network devices, managing VLANs, DHCP, VPNs, and implementing secure routing protocols. I also explore security vulnerabilities using tools in Kali Linux and scripts developed in Python, continuously expanding my knowledge in real-world threat analysis and defense.</p>
         </section>
        <section id="projects">
     <h2>Projects</h2>
