--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
              <div id="NetworkDesign" class="tabcontent">
                 <h3>Enterprise Network Design</h3>
-                <img src="https://github.com/turtle-txt/turtle-txt.github.io/blob/main/network_design.png?raw=true" alt="Network Design" style="width:100%; max-width: 500px;">
+                <img src="network.png" alt="Network Design" style="width:100%; max-width: 500px;">
                 <p>This design simulates an enterprise network using Cisco Packet Tracer, featuring multi-VLAN configuration, OSPF routing, DHCP relay, and ACLs for traffic control across multiple international office locations.</p>
             </div>
            
